trying to fix the alignment of the text when full web

--- a/css/main.css
+++ b/css/main.css
@@ -31,22 +31,37 @@ html {
 
    body {
         padding: 60px 0px;
-        background-color: rgb(220, 220, 220);
         font-family: 'source sans pro', sans-serif;
     }
-    
+
+    h1 {
+        color: #404040;
+        font-size: 54px;
+        margin: 0px;
+    }
+
+
     button {
         background-color: #7e4e95;
+        color: white;
         border: none;
-    padding: 15px 32px;
-    text-align: center;
-    font-size: 16px;
+        padding: 12px 24px;
+        text-align: center;
+        font-size: 14px;
+        font-weight: 600;
+        margin-bottom: 25px;
+        border-radius: 15px;
     }
 
     button a {
         color: white;
         text-decoration: none;
     }
+
+    ul {
+        padding-left: 0px;
+    }
+
 
     .event-list {
         list-style: none;
@@ -55,8 +70,8 @@ html {
     }
     .event-list > li {
         background-color: rgb(255, 255, 255);
-        box-shadow: 0px 0px 5px rgb(51, 51, 51);
-        box-shadow: 0px 0px 5px rgba(51, 51, 51, 0.7);
+        box-shadow: 0px 0px 1px rgb(51, 51, 51);
+        box-shadow: 0px 0px 1px rgba(51, 51, 51, 0.7);
         padding: 0px;
         margin: 0px 0px 20px;
     }
@@ -65,7 +80,7 @@ html {
         width: 100%;
         color: white;
         background-color: #9976b5;
-        padding: 5px;
+        padding: 5px 0px 5px 0px;
         text-align: center;
         text-transform: uppercase;
     }
@@ -104,69 +119,8 @@ html {
         font-weight: 300;
         margin: 0px;
     }
-    .event-list > li > .info > ul,
-    .event-list > li > .social > ul {
-        display: table;
-        list-style: none;
-        margin: 10px 0px 0px;
-        padding: 0px;
-        width: 100%;
-        text-align: center;
-    }
-    .event-list > li > .social > ul {
-        margin: 0px;
-    }
-    .event-list > li > .info > ul > li,
-    .event-list > li > .social > ul > li {
-        display: table-cell;
-        cursor: pointer;
-        color: rgb(30, 30, 30);
-        font-size: 11pt;
-        font-weight: 300;
-        padding: 3px 0px;
-    }
-    .event-list > li > .info > ul > li > a {
-        display: block;
-        width: 100%;
-        color: rgb(30, 30, 30);
-        text-decoration: none;
-    } 
-    .event-list > li > .social > ul > li {    
-        padding: 0px;
-    }
-    .event-list > li > .social > ul > li > a {
-        padding: 3px 0px;
-    } 
-    .event-list > li > .info > ul > li:hover,
-    .event-list > li > .social > ul > li:hover {
-        color: rgb(30, 30, 30);
-        background-color: rgb(200, 200, 200);
-    }
-    .facebook a,
-    .twitter a,
-    .google-plus a {
-        display: block;
-        width: 100%;
-        color: rgb(75, 110, 168) !important;
-    }
-    .twitter a {
-        color: rgb(79, 213, 248) !important;
-    }
-    .google-plus a {
-        color: rgb(221, 75, 57) !important;
-    }
-    .facebook:hover a {
-        color: rgb(255, 255, 255) !important;
-        background-color: rgb(75, 110, 168) !important;
-    }
-    .twitter:hover a {
-        color: rgb(255, 255, 255) !important;
-        background-color: rgb(79, 213, 248) !important;
-    }
-    .google-plus:hover a {
-        color: rgb(255, 255, 255) !important;
-        background-color: rgb(221, 75, 57) !important;
-    }
+
+
 
     @media (min-width: 768px) {
         .event-list > li {
@@ -186,7 +140,7 @@ html {
             float: left;
         }
         .event-list > li > .info {
-            background-color: rgb(245, 245, 245);
+            background-color: white;
             overflow: hidden;
         }
         .event-list > li > time,
@@ -210,25 +164,6 @@ html {
             position: absolute;
             left: 0px;
             bottom: 0px;
-        }
-        .event-list > li > .social {
-            position: absolute;
-            top: 0px;
-            right: 0px;
-            display: block;
-            width: 40px;
-        }
-        .event-list > li > .social > ul {
-            border-left: 1px solid rgb(230, 230, 230);
-        }
-        .event-list > li > .social > ul > li {          
-            display: block;
-            padding: 0px;
-        }
-        .event-list > li > .social > ul > li > a {
-            display: block;
-            width: 40px
-            padding: 10px 0px 9px;
         }
     }
 
